force-app/main/default/objects/SPEN_SiteDetails__c/SPEN_SiteDetails__c.object-meta.xml
<CustomObject>
    <label>Site Details</label>
    <nameField>
        <displayFormat>SD-{00000000}</displayFormat>
        <label>Site Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Site Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>