force-app/main/default/objects/SPEN_SiteDetails__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <description>Duration for SW cases</description>
    <label>Duration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>