force-app/main/default/objects/SPEN_SiteDetails__c/fields/SPEN_ActualTime__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ActualTime__c</fullName>
    <description>Actual time to upload the co-ordinates</description>
    <label>Actual Time</label>
    <type>DateTime</type>
</CustomField>