force-app/main/default/objects/SPEN_SiteDetails__c/fields/SPEN_AdditionalDetails__c.field-meta.xml
<CustomField>
    <fullName>SPEN_AdditionalDetails__c</fullName>
    <label>Additional Details</label>
    <type>TextArea</type>
</CustomField>