force-app/main/default/objects/SPEN_SiteDetails__c/fields/SPEN_ApplicationDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ApplicationDate__c</fullName>
    <description>CRMD-7409</description>
    <label>Application Date</label>
    <type>Date</type>
</CustomField>