force-app/main/default/objects/SPEN_SiteDetails__c/fields/SPEN_Coords__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Coords__c</fullName>
    <label>Coords</label>
    <length>255</length>
    <type>Text</type>
</CustomField>