force-app/main/default/objects/SPEN_SiteDetails__c/fields/SPEN_EarliestStartDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_EarliestStartDate__c</fullName>
    <description>Earliest Start Date for SW cases</description>
    <label>Earliest Start Date</label>
    <type>Date</type>
</CustomField>