force-app/main/default/objects/SPEN_SiteDetails__c/fields/SPEN_EarlyStartReference__c.field-meta.xml
<CustomField>
    <fullName>SPEN_EarlyStartReference__c</fullName>
    <description>Early Start Reference for SW case</description>
    <label>Early Start Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>