force-app/main/default/objects/SPEN_SiteDetails__c/fields/SPEN_LAReference__c.field-meta.xml
<CustomField>
    <fullName>SPEN_LAReference__c</fullName>
    <label>LA Reference</label>
    <length>25</length>
    <type>Text</type>
</CustomField>