force-app/main/default/objects/SPEN_SiteDetails__c/fields/SPEN_LatestStartDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_LatestStartDate__c</fullName>
    <description>Latest Start Date for SW cases</description>
    <label>Latest Start Date</label>
    <type>Date</type>
</CustomField>