force-app/main/default/objects/SPEN_SiteDetails__c/fields/SPEN_LocationOfWorks__c.field-meta.xml
<CustomField>
    <fullName>SPEN_LocationOfWorks__c</fullName>
    <description>CRMD - 7409 Site Detail</description>
    <label>Location of Works</label>
    <length>255</length>
    <type>Text</type>
</CustomField>