force-app/main/default/objects/SPEN_SiteDetails__c/fields/SPEN_NoticePermitReq__c.field-meta.xml
<CustomField>
    <fullName>SPEN_NoticePermitReq__c</fullName>
    <label>Notice/Permit Requested?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>