force-app/main/default/objects/SPEN_SiteDetails__c/fields/SPEN_PowerOn_Additional_Coordinates__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PowerOn_Additional_Coordinates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PowerOn Additional Coordinates</label>
    <type>Checkbox</type>
</CustomField>