force-app/main/default/objects/SPEN_SiteDetails__c/fields/SPEN_RoadCategory__c.field-meta.xml
<CustomField>
    <fullName>SPEN_RoadCategory__c</fullName>
    <description>Road Category for SW cases</description>
    <label>Road Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cat 0</fullName>
            </value>
            <value>
                <fullName>Cat 1</fullName>
            </value>
            <value>
                <fullName>Cat 2</fullName>
            </value>
            <value>
                <fullName>Cat 3</fullName>
            </value>
            <value>
                <fullName>Cat 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>