force-app/main/default/objects/SPEN_SiteDetails__c/fields/SPEN_RoadOpeningNoticeValidity__c.field-meta.xml
<CustomField>
    <fullName>SPEN_RoadOpeningNoticeValidity__c</fullName>
    <label>Road Opening Notice Validity</label>
    <type>Date</type>
</CustomField>