force-app/main/default/objects/SPEN_SiteDetails__c/fields/SPEN_SurfaceType__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SurfaceType__c</fullName>
    <description>CRMD- 7409</description>
    <label>Surface Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Carriageway</fullName>
            </value>
            <value>
                <fullName>Cycleway</fullName>
            </value>
            <value>
                <fullName>Footpath</fullName>
            </value>
            <value>
                <fullName>Footway</fullName>
            </value>
            <value>
                <fullName>Unmade</fullName>
            </value>
            <value>
                <fullName>Verge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>