force-app/main/default/objects/SPEN_SiteDetails__c/fields/SPEN_TrafficLights__c.field-meta.xml
<CustomField>
    <fullName>SPEN_TrafficLights__c</fullName>
    <label>Traffic Lights</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2-Way</fullName>
            </value>
            <value>
                <fullName>3-Way</fullName>
            </value>
            <value>
                <fullName>4-Way</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>