force-app/main/default/objects/SPEN_SiteDetails__c/fields/SPEN_TrafficManagement__c.field-meta.xml
<CustomField>
    <fullName>SPEN_TrafficManagement__c</fullName>
    <description>CRMD-7409</description>
    <label>Traffic Management</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contraflow</fullName>
            </value>
            <value>
                <fullName>Convoy Working</fullName>
            </value>
            <value>
                <fullName>Give &amp; Take Traffic Control</fullName>
            </value>
            <value>
                <fullName>Hard Shoulder Closure</fullName>
            </value>
            <value>
                <fullName>Lane Closure</fullName>
            </value>
            <value>
                <fullName>No Obstruction on C/W or F/W</fullName>
            </value>
            <value>
                <fullName>Portable Traffic Lights (TTLS)</fullName>
            </value>
            <value>
                <fullName>Priority System Traffic Control</fullName>
            </value>
            <value>
                <fullName>Road Closure</fullName>
            </value>
            <value>
                <fullName>Road Narrowing (Two Way Working)</fullName>
            </value>
            <value>
                <fullName>Slip Closure</fullName>
            </value>
            <value>
                <fullName>Stop/Go Boards Traffic Control</fullName>
            </value>
            <value>
                <fullName>Traffic Management Not Yet Known</fullName>
            </value>
            <value>
                <fullName>Give &amp; Take</fullName>
            </value>
            <value>
                <fullName>Multi Way Signals</fullName>
            </value>
            <value>
                <fullName>No C/W Incursion</fullName>
            </value>
            <value>
                <fullName>Priority Working</fullName>
            </value>
            <value>
                <fullName>Some C/W Incursion</fullName>
            </value>
            <value>
                <fullName>Stop/Go Boards</fullName>
            </value>
            <value>
                <fullName>Two Way Signals</fullName>
            </value>
            <value>
                <fullName>Works Entirely on the Footway</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>