force-app/main/default/objects/SPEN_SiteDetails__c/fields/SPEN_WorksReference__c.field-meta.xml
<CustomField>
    <fullName>SPEN_WorksReference__c</fullName>
    <description>Works Reference for SW case</description>
    <label>Works Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>