force-app/main/default/objects/SPEN_SiteDetails__c/recordTypes/NRSWA.recordType-meta.xml
<RecordType>
    <fullName>NRSWA</fullName>
    <active>true</active>
    <label>NRSWA</label>
</RecordType>