force-app/main/default/objects/SPEN_SiteDetails__c/recordTypes/Streetworks.recordType-meta.xml
<RecordType>
    <fullName>Streetworks</fullName>
    <active>true</active>
    <label>Streetworks</label>
</RecordType>